--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.614.0",
+    "@conform-to/react": "^1.1.5",
+    "@conform-to/zod": "^1.1.5",
     "@remix-run/node": "^2.10.2",
     "@remix-run/react": "^2.10.2",
     "@remix-run/serve": "^2.10.2",
     "isbot": "^4.1.0",
+    "jose": "^5.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.7.0",
-    "remix-auth-form": "^1.5.0"
+    "remix-auth-form": "^1.5.0",
+    "remix-toast": "^1.2.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.10.2",
@@ -35,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
+    "remix-flat-routes": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
